# UPB-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
data/: about_upb.md
data/contact/: contact.md
data/engineerings/: ing_administrativa.md  ing_aeronautica.md  ing_agroindustrial.md  ing_cienciadedatos.md  ing_electrica.md  ing_electronica.md  ing_ided.md  ing_industrial.md  ing_mecanica.md  ing_nanotecnología.md  ing_quimica.md  ing_sistemas.md
data/enroll/: inscripciones.md
data/metadata/: metadata.json
data/scholarships/: becas_financiacion.md
src/: example_usage.py  ingest.py  pipeline.py  setup_retrieval.py  test_rag.py
src/embeddings/: embeddings.py
src/loader/: ingest.py
src/metadata/: metadata.json  metadata.py
src/processing/: chunking.py
src/rag/: chain.py  rag_pipeline.py
src/retrieval/: retriever.py
src/store/: __init__.py  store.py
vectorstore/faiss_index/: index.faiss
