[project]
name = "upb-rag-careers"
version = "0.1.0"
description = "RAG system for career exploration at UPB Medellín"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "bs4>=0.0.2",
    "langchain==1.0.2",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.0", # explicitly pinned to prebuilt wheel
]
